fix: Correct z-index and Workaround for Safari CSS bug

--- a/website/src/global.css
+++ b/website/src/global.css
@@ -169,6 +169,8 @@ main pre {
   padding: calc(0.8 * var(--turtle-ui--unit)) 8px;
   font-size: calc(1.6 * var(--turtle-ui--unit));
   line-height: 1.71;
+
+  z-index: 100;
 }
 .sidebar ul {
   padding: 0;
